--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,27 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "blue>=0.9.1",
+    "isort>=6.0.1",
     "pytest>=8.4.0",
     "pytest-asyncio>=1.0.0",
     "pytest-django>=4.11.1",
     "respx>=0.22.0",
     "taskipy>=1.14.1",
 ]
+
+[tool.isort]
+profile = "black"
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+known_first_party = ["weatheralert", "locations", "temperature", "alerts", "integrations", "api"]
+default_section = "THIRDPARTY"
+skip_gitignore = true
+
+[tool.taskipy.tasks]
+format = "isort . && blue ."
+run = "uvicorn weather_alert.asgi:application --host 0.0.0.0 --port 8000 --reload"
