--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dev = [
     "pytest>=8.4.0",
     "pytest-asyncio>=1.0.0",
     "pytest-django>=4.11.1",
+    "pytest-mock>=3.14.1",
     "respx>=0.22.0",
     "taskipy>=1.14.1",
 ]
