--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "django-celery-beat>=2.8.1",
     "django-ninja>=1.4.3",
     "httpx[http2]>=0.28.1",
+    "loguru>=0.7.3",
     "python-decouple>=3.8",
     "redis[hiredis]>=6.2.0",
     "stamina>=25.1.0",
