--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "redis[hiredis]>=6.2.0",
     "stamina>=25.1.0",
     "uvicorn[standard]>=0.34.3",
+    "whitenoise>=6.9.0",
 ]
 
 [dependency-groups]
